// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Snapshots > renders Danger story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk xc342km xng3xce x9r1u3d x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.medium xif65rj x1ff1495 xu0aao5 Button__buttonStyles.danger x1596o1h x37qbrc x1awj2ng"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:57; stories/Button.tsx:45"
  type="button"
>
  Danger Button
</button>
`;

exports[`Button Snapshots > renders Large story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk xc342km xng3xce x9r1u3d x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.large x1j61zf2 x1bg5miv x1gg8mnh Button__buttonStyles.primary xvqrlgc xkdfp31 x1awj2ng"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:62; stories/Button.tsx:28"
  type="button"
>
  Large Button
</button>
`;

exports[`Button Snapshots > renders Medium story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk xc342km xng3xce x9r1u3d x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.medium xif65rj x1ff1495 xu0aao5 Button__buttonStyles.primary xvqrlgc xkdfp31 x1awj2ng"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:57; stories/Button.tsx:28"
  type="button"
>
  Medium Button
</button>
`;

exports[`Button Snapshots > renders Primary story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk xc342km xng3xce x9r1u3d x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.medium xif65rj x1ff1495 xu0aao5 Button__buttonStyles.primary xvqrlgc xkdfp31 x1awj2ng"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:57; stories/Button.tsx:28"
  type="button"
>
  Primary Button
</button>
`;

exports[`Button Snapshots > renders Secondary story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.medium xif65rj x1ff1495 xu0aao5 Button__buttonStyles.secondary x6cgz0f x1jmbrsh x1525slw xmkeg23 x1y0btm7 x7kbyhx"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:57; stories/Button.tsx:35"
  type="button"
>
  Secondary Button
</button>
`;

exports[`Button Snapshots > renders Small story correctly 1`] = `
<button
  class="Button__buttonStyles.base xmcqa5u xk50ysn x1ypdohk xc342km xng3xce x9r1u3d x1kogg8i x169l3ba x3nfvp2 x6s0dn4 xl56j7k x1hl2dhg xnn1q72 x14ow2ja x3kbueh x1gnnqk1 x1yrdse8 Button__buttonStyles.small xfifm61 x1arfzav xe0p6wg Button__buttonStyles.primary xvqrlgc xkdfp31 x1awj2ng"
  data-style-src="stories/Button.tsx:5; stories/Button.tsx:52; stories/Button.tsx:28"
  type="button"
>
  Small Button
</button>
`;
